nestc/src/sema/snapshots/nestc__sema__tests__ir_snap_ref_and_deref.snap
---
source: src/sema/tests.rs
expression: "ir_text(\"rd :: func (p: *i32) -> i32 {\\n  let r := &p\\n  return p.*\\n}\\n\")"
---
func rd(p: *i32) -> i32 {
  let r: **i32 = (&p: *i32): **i32
  return (p: *i32.*): i32
}
