nestc/src/sema/snapshots/nestc__sema__tests__ir_snap_scalar_literals.snap
---
source: src/sema/tests.rs
expression: "ir_text(\"lits :: func () {\\n  let i := 7\\n  let f := 2.5\\n  let b := true\\n  let c := 'z'\\n  let s := \\\"hi\\\"\\n}\\n\")"
---
func lits() -> void {
  let i: isize = $cast(7: comptime_int): isize
  let f: f64 = $cast(2.5: comptime_float): f64
  let b: bool = true: bool
  let c: char = 'z': char
  let s: string = "hi": string
}
