nestc/src/sema/snapshots/nestc__sema__tests__ir_snap_static_trait_call_targets_the_selected_impl.snap
---
source: src/sema/tests.rs
expression: "ir_text(\"Make :: trait { make :: func (n: i32) -> Self }\\nW :: struct { v: i32 }\\nimpl Make for W { make :: func (n: i32) -> W { return W { v: n } } }\\nf :: func () -> W { return Make.make(3) }\\n\")"
---
func f() -> W {
  return (W.make: func(i32) -> W)($cast(3: comptime_int): i32): W
}
func make(n: i32) -> W {
  return W { v: n: i32 }: W
}
