nestc/src/sema/snapshots/nestc__sema__tests__ir_snap_struct_construct_named.snap
---
source: src/sema/tests.rs
expression: "ir_text(\"P :: struct { x: i32, y: i32 }\\nmk :: func () -> P { return P { x: 1, y: 2 } }\\n\")"
---
func mk() -> P {
  return P { x: 1: i32, y: 2: i32 }: P
}
