nestc/src/sema/snapshots/nestc__sema__tests__ir_snap_try_abort_lowers_to_unwrap.snap
---
source: src/sema/tests.rs
expression: "ir_text(\"fallible :: func () -> Result.<i32, i32> { return .ok(1) }\\nta :: func () -> i32 {\\n  const x := fallible().!\\n  return x\\n}\\n\")"
---
func fallible() -> core.Result.<i32, i32> {
  return .ok($cast(1: comptime_int): i32): core.Result.<i32, i32>
}
func ta() -> i32 {
  let x: i32 = (core.Result.unwrap: func(core.Result.<i32, i32>) -> i32)((fallible: func() -> core.Result.<i32, i32>)(): core.Result.<i32, i32>): i32
  return x: i32
}
