nestc/src/sema/snapshots/nestc__sema__tests__ir_snap_try_propagate_desugars_to_match.snap
---
source: src/sema/tests.rs
expression: "ir_text_lenient(\"fallible :: func () -> Result.<i32, i32> { return .ok(1) }\\ntp :: func () -> i32 {\\n  const x := fallible().?\\n  return x\\n}\\n\")"
---
func fallible() -> core.Result.<i32, i32> {
  return .ok($cast(1: comptime_int): i32): core.Result.<i32, i32>
}
func tp() -> i32 {
  block: i32 {
    let __try1: core.Result.<i32, i32> = (((fallible: func() -> core.Result.<i32, i32>)(): core.Result.<i32, i32>.branch): func(core.Result.<i32, i32>) -> core.Result.<i32, i32>)(): core.Result.<i32, i32>
    match __try1: core.Result.<i32, i32> {
      .ok(__v2) => __v2: i32
      block: void {
        return .err(__r3: i32): i32
      }
      .err(__r3) => <block: void>
    }
    tail <match: i32>
  }
  let x: i32 = <block: i32>
  return x: i32
}
