nestc/src/sema/snapshots/nestc__sema__tests__ir_snap_try_propagate_on_an_option.snap
---
source: src/sema/tests.rs
expression: "ir_text(\"head :: func () -> Option.<i32> { return .none }\\ntpo :: func () -> Option.<i32> {\\n  const x := head().?\\n  return .some(x)\\n}\\n\")"
---
func head() -> core.Option.<i32> {
  return .none: core.Option.<i32>
}
func tpo() -> core.Option.<i32> {
  block: i32 {
    let __try1: core.ControlFlow.<void, i32> = (core.Option.branch: func(core.Option.<i32>) -> core.ControlFlow.<void, i32>)((head: func() -> core.Option.<i32>)(): core.Option.<i32>): core.ControlFlow.<void, i32>
    match __try1: core.ControlFlow.<void, i32> {
      .proceed(__v2) => __v2: i32
      block: void {
        return (core.Option.from_residual: func(void) -> core.Option.<i32>)(__r3: void): core.Option.<i32>
      }
      .stop(__r3) => <block: void>
    }
    tail <match: i32>
  }
  let x: i32 = <block: i32>
  return .some(x: i32): core.Option.<i32>
}
