nestc/src/sema/snapshots/nestc__sema__tests__ir_snap_tuple_and_tuple_index.snap
---
source: src/sema/tests.rs
expression: "ir_text(\"tup :: func () -> isize {\\n  let t := (1, 2, 3)\\n  return t.0 + t.1 + t.2\\n}\\n\")"
---
func tup() -> isize {
  let t: (isize, isize, isize) = ($cast(1: comptime_int): isize, $cast(2: comptime_int): isize, $cast(3: comptime_int): isize): (isize, isize, isize)
  return #builtin(Add) (core.ops.Add.add: *func(isize, isize) -> isize)(#builtin(Add) (core.ops.Add.add: *func(isize, isize) -> isize)((t: (isize, isize, isize).0): isize, (t: (isize, isize, isize).1): isize): isize, (t: (isize, isize, isize).2): isize): isize
}
